# rusty-journal

./: Cargo.toml  test-journal.json
src/: cli.rs  main.rs  tasks.rs
